# Finominal

./: README.md  main.py  pyproject.toml  response_1780253412548.json  response_1780253444652.json  response_1780253461424.json  response_1780253489051.json  response_1780253512348.json
app/api/v1/: routers.py
app/api/v1/endpoints/: health.py  strategies.py
app/core/: config.py  state.py
app/data/: historical_data.xlsx
app/db/: close_db.py  db_connection.py  init_db.py
app/schemas/: strategies.py
app/services/: data_loader.py  equal.py
app/services/optimizers/: base.py  max_sharpe.py  min_drawdown.py  min_volatility.py  risk_parity.py
app/utils/: common.py  helpers.py
